--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.10.2",
+    "framer-motion": "^11.0.8",
+    "next": "14.1.2",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
