--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.10.2",
     "framer-motion": "^11.0.8",
+    "leaflet": "^1.9.4",
     "next": "14.1.2",
     "prisma": "^5.10.2",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
