--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "framer-motion": "^11.0.8",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
-    "next": "14.1.2",
-    "prisma": "^5.10.2",
-    "react": "^18",
+    "lottie-react": "^2.4.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "next": "^14.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prisma": "^5.12.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3"
   }
 }
