--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lottie-react": "^2.4.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-icons": "^5.0.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-stacked-center-carousel": "^1.0.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
