--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^14.2.2",
     "postcss": "^8",
     "prisma": "^5.12.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3"
